# omaviat_calendar

./: .gitignore  README.md  pyproject.toml  run.py
omaviat_calendar/: bot.py  config.py  database.py
omaviat_calendar/extensions/: __init__.py  extensions_basic.py
